# maturin-issue

./: Cargo.toml  pyproject.toml
src/: lib.rs
